compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__generic_method_snapshots@multiple_generics.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "impl Test { fn test<T1, T2>() -> void {} }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15339411229389319392: Impl(
            Implementation {
                id: 15339411229389319392,
                impl_id: None,
                target: Type {
                    name: Test,
                    type_params: [],
                    location: <internal>:5:9,
                },
                methods: [
                    MethodDefinition {
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "test",
                            location: <internal>:15:19,
                        },
                        parameters: [],
                        type_parameters: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T1",
                                    location: <internal>:20:22,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [],
                                location: <internal>:20:22,
                            },
                            TypeParameter {
                                name: Identifier {
                                    name: "T2",
                                    location: <internal>:24:26,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [],
                                location: <internal>:24:26,
                            },
                        ],
                        return_type: Some(
                            Type {
                                name: void,
                                type_params: [],
                                location: <internal>:33:37,
                            },
                        ),
                        block: Some(
                            Block {
                                statements: [],
                                location: <internal>:38:40,
                            },
                        ),
                        location: <internal>:12:40,
                    },
                ],
                type_parameters: [],
                location: <internal>:0:42,
            },
        ),
    },
    statements: {},
    expressions: {},
}
