compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__generic_method_snapshots@single_generic.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "impl Test { fn test<T>() -> void {} }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15339411229389319392: Impl(
            Implementation {
                id: 15339411229389319392,
                impl_id: None,
                target: Type {
                    name: Test,
                    type_params: [],
                    location: <internal>:5:9,
                },
                methods: [
                    MethodDefinition {
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "test",
                            location: <internal>:15:19,
                        },
                        parameters: [],
                        type_parameters: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T",
                                    location: <internal>:20:21,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [],
                                location: <internal>:20:21,
                            },
                        ],
                        return_type: Some(
                            Type {
                                name: void,
                                type_params: [],
                                location: <internal>:28:32,
                            },
                        ),
                        block: Some(
                            Block {
                                statements: [],
                                location: <internal>:33:35,
                            },
                        ),
                        location: <internal>:12:35,
                    },
                ],
                type_parameters: [],
                location: <internal>:0:37,
            },
        ),
    },
    statements: {},
    expressions: {},
}
