compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__implicit_imports@Array<Int32>.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "fn foo() -> Array<Int32> { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: std::Array,
                        type_params: [
                            Type {
                                name: std::Int32,
                                type_params: [],
                                location: <internal>:18:23,
                            },
                        ],
                        location: <internal>:17:24,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:25:28,
                    },
                ),
                location: <internal>:0:28,
            },
        ),
    },
    statements: {},
    expressions: {},
}
