compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__implicit_imports@Int32.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "fn foo() -> Int32 { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: std::Int32,
                        type_params: [],
                        location: <internal>:12:17,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:18:21,
                    },
                ),
                location: <internal>:0:21,
            },
        ),
    },
    statements: {},
    expressions: {},
}
