compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__implicit_imports@Pointer.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "fn foo() -> Pointer { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: std::Pointer,
                        type_params: [],
                        location: <internal>:12:19,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:20:23,
                    },
                ),
                location: <internal>:0:23,
            },
        ),
    },
    statements: {},
    expressions: {},
}
